# fast-clifford

./: .gitignore  CLAUDE.md  README.md  benchmark.py  pyproject.toml
.specify/memory/: constitution.md
docs/: benchmark.md
fast_clifford/: __init__.py
fast_clifford/algebras/: __init__.py
fast_clifford/cga/: __init__.py  base.py  layers.py  multivector.py  registry.py  runtime.py
fast_clifford/clifford/: __init__.py  base.py  bott.py  layers.py  multivector.py  registry.py
fast_clifford/codegen/: __init__.py  base.py  cga_factory.py  clifford_factory.py  generate.py  generator.py  sparse_analysis.py
fast_clifford/tests/: __init__.py  test_cga_interface.py  test_compose.py  test_exp_bivector.py  test_extended_ops.py  test_extended_ops_extra.py  test_inner_product.py  test_runtime_cga.py  test_runtime_extended.py  test_similitude.py
scripts/: generate_cga2d.py  generate_cga3d.py  generate_cga4d.py  generate_cga5d.py
specs/001-cga-algebra-rules/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cga-2d-1d/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cga4d-cga5d/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cga-unified-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-cga-extended-ops/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: __init__.py  test_bott.py  test_cga.py  test_clifford_interface.py  test_onnx_export.py  test_pga.py  test_rotor_exponential.py  test_symmetric.py  test_vga.py
(+78 files in other folders)
