[project]
name = "fast-clifford"
version = "0.1.0"
description = "High-performance CGA (Conformal Geometric Algebra) code generator for PyTorch with ONNX/TensorRT deployment support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "clifford>=1.4.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "onnxscript>=0.1.0",
    "sympy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:torch.onnx.*:",
    "ignore:.*dynamic_axes.*:UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["fast_clifford"]
